Revision history for Perl extension MojoX-Dispatcher-Qooxdoo-Jsonrpc:

        - simplify plugin code a little by using get method when
          setting up routes

0.75    - make plugin in development mode creative in finding
          the qooxdoo source code and contrib downloads

0.74    Mon Arp 04 2011
        - added better __WARN__ handler as suggested by Sebastian Riedel
        - fixed package name in example
        - added pointer to Mojolicious::Plugin::QooxdooJsonrpc in
          MojoX::Dispatcher::Qooxdoo::Jsonrpc documentation
        
0.72    Sat Mar 26 2011
        - send requests and results to log at debug level
        - new module Mojolicious::Plugin::QooxdooJsonrpc makes writing
          applications even simpler. Included support for serving
          both the production and the source version of the application

0.71    Tue Mar 22 2011
        - add utf8 to content_type
        - re-decode json prior to rendering so that mojo can do the final encoding
        - update tests accordingly

0.70	Thu Mar 1 2011
        - fix namespace issues
        - update error codes according to
          http://manual.qooxdoo.org/1.3.x/pages/communication/rpc_server_writer_guide.html#code

0.69	Mon Feb 28 2011
        - better documentation
        - improved exception example

0.68	Sun Feb 27 2011
	- fix tests

0.67	Sun Feb 27 2011
        - bring Makefile.PL in line with latest trends
        - add testing
        - some catch more errors in jsonrpc
        - set application/json header on response
        - report rpc errors to the mojo log
        - do not localize __WARN__ in eval as this makes no sense here
        - simplified code a bit more

0.66    Thu Feb 22 2011 
	*** INCOMPATIBLE CHANGES ***

        - the service module has to explicitly tell which
          of its methods are to be called remotely via the
          rpc_access_allow.

        - drop the whole _ prefix thing ... and call the